# hdlpkg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/commands/: coding-guidelines.md  release.md  tackle-issue.md  update-docs.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: INDEX.md  README.md  ai_agent_instructions.md  architecture.md  progress_tracker.md  trial.md  user_guide.md
docs/design/: 0.13.0-git-and-ipxact.md  0.14.0-git-and-ipxact.md  0.15.0-ipxact-ports-businterfaces.md  consumer-flow-multi-registry.md  module-entity-coexistence.md  rename-to-hdlpkg.md
docs/modules/: README.md  backends.md  cache.md  cli.md  credentials.md  exceptions.md  identity.md  ipxact.md  lockfile.md  mangle.md  manifest.md  packaging.md  registry.md  resolver.md  sbom.md  versioning.md
docs/research/: state_of_the_art.md
examples/: README.md
examples/fifo/: ip.toml
examples/fifo/rtl/: sync_fifo.sv
examples/fifo/tb/: sync_fifo_tb.sv
examples/integration/: README.md  hdlpkg.mk
examples/integration/questa/: Makefile
examples/uart/: ip.toml
examples/uart/rtl/: uart_rx.sv  uart_top.sv  uart_tx.sv
examples/uart/tb/: uart_tb.sv
man/: README.md  hdlpkg.1
scripts/: check_release_version.py  extract_release_notes.py  gen_manpage.py  render_test_summary.py
shim/: README.md  pyproject.toml
src/hdl_ip_packager/: __init__.py  __main__.py  cache.py  cli.py  credentials.py  editing.py  exceptions.py  ipxact.py  lockfile.py  mangle.py  manifest.py  packaging.py  registry.py  resolver.py  scaffold.py  treeview.py  version.py  vlnv.py
src/hdl_ip_packager/backends/: __init__.py  base.py  edam.py  ghdl.py  icarus.py  verilator.py  vivado.py  yosys.py
src/hdlpkg/: __init__.py  __main__.py  cache.py  cli.py  credentials.py  editing.py  ipxact.py  lockfile.py  manifest.py  packaging.py  registry.py  resolver.py  sbom.py  scaffold.py  treeview.py  vlnv.py
src/hdlpkg/backends/: __init__.py  base.py  filelist.py  icarus.py  verilator.py  vivado.py  yosys.py
tests/: README.md  conftest.py
tests/integration/: test_cache.py  test_conflict_policy_cli.py  test_e2e_lifecycle.py  test_examples.py  test_filelist_gen_cli.py  test_gen_cli.py  test_gen_registry_cli.py  test_git_registry_cli.py  test_http_registry_cli.py  test_install_oneshot_cli.py  test_install_uses_lock_cli.py  test_ipxact_cli.py  test_locked_cli.py  test_locked_from_lock_source_cli.py  test_mangle_gen_cli.py  test_mangle_unit_gen_cli.py  test_mangle_vhdl_gen_cli.py  test_manifest_cli_flow.py  test_multi_registry_cli.py  test_oci_auth_cli.py  test_oci_registry_cli.py  test_opaque_registry_cli.py  test_pack_cli.py  test_packaging.py  test_registry.py  test_registry_resolve_cli.py  test_resolve_cli.py  test_sbom_cli.py  test_tree_cli.py  test_vendor_cli.py
tests/schema/ipxact-1685-2014/: NOTICE.md
tests/schema/ipxact-1685-2022/: NOTICE.md
tests/unit/: test_backends.py  test_check_release_version.py  test_cli.py  test_composite_registry.py  test_credentials.py  test_edam.py  test_editing.py  test_extract_release_notes.py  test_filelist_backend.py  test_integration_example.py  test_ipxact.py  test_ipxact_xsd.py  test_lock_satisfies_manifest.py  test_lock_source_registry.py  test_lockfile.py  test_login_cli.py  test_mangle.py  test_manifest.py  test_manpage.py  test_planned_stubs.py  test_registry_location.py  test_registry_user_agent.py  test_resolver.py  test_sbom.py  test_scaffold.py  test_treeview.py  test_version.py  test_version_properties.py  test_vlnv.py
